--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.6",
+    "twilio": "^5.9.0"
   },
   "devDependencies": {
     "prisma": "^6.16.2"
