config pra subir banco e api para nuvem

--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,7 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
-DATABASE_URL="mysql://root:bcd127@localhost:3306/facilita_db"
+DATABASE_URL="mysql://root:12345678@localhost:3306/facilita_db"
 PORT = 8080
 JWT_SECRET=9691dfc26aa0abda818bb3dc6bac8950
 SMTP_HOST=smtp.gmail.com
