--- a/.env
+++ b/.env
@@ -5,8 +5,10 @@ SMTP_HOST=smtp.gmail.com
 SMTP_USER=facilita.ajuda@gmail.com
 SMTP_PASS=vymojslsyxkeudjc
 FRONTEND_URL=https://facilita-front-end.vercel.app/
+PAGBANK_TOKEN=bdac5e23-2fc1-4c01-9f8a-9d2c3ca8551d9a925bf74eee8b56e3230442eb2439835ef2-2211-4835-bb73-4ead649532df
 
 module.exports = {
     PORT,
-    JWT_SECRET
+    JWT_SECRET,
+    PAGBANK_TOKEN
 }
