--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://root:12345678@localhost:3306/facilita_db"
+DATABASE_URL="mysql://root:jeOcFDJEvfqFKjjaFgMBqawZGvzARDHf@nozomi.proxy.rlwy.net:18972/railway"
 PORT = 8080
 JWT_SECRET=9691dfc26aa0abda818bb3dc6bac8950
 SMTP_HOST=smtp.gmail.com
