--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.1",
     "nodemailer": "^7.0.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^5.9.0"
   },
   "devDependencies": {
