--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^12.1.0",
     "mysql2": "^3.15.1",
     "nodemailer": "^7.0.6",
     "swagger-jsdoc": "^6.2.8",
