--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://admin_facilita:%21Facilita%40123456@dbfacilita.mysql.database.azure.com:3306/dbfacilita?sslaccept=strict"
+DATABASE_URL="mysql://root:12345678@localhost:3306/facilita_db"
 PORT = 8080
 JWT_SECRET=9691dfc26aa0abda818bb3dc6bac8950
 SMTP_HOST=smtp.gmail.com
