--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mysql2": "^3.15.1",
     "nodemailer": "^7.0.6",
     "socket.io": "^4.8.1",
+    "socketio": "^1.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^5.10.2"
