--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon app.js",
-    "start": "cross-env NODE_ENV=production node app.js"
+    "start": "node app.js"
   }
 }
