--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon app.js",
-    "build": "npx prisma generate",
-    "prisma:generate": "npx prisma generate",
-    "prisma:migrate": "npx prisma migrate deploy",
-    "start": "npm run build && cross-env NODE_ENV=production node app.js"
+    "build": "npx prisma generate --no-engine",
+    "postinstall": "chmod +x node_modules/.bin/prisma && npx prisma generate --no-engine",
+    "start": "npm run postinstall && cross-env NODE_ENV=production node app.js"
   }
 }
