--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^5.10.2",
-    "cross-env": "^10.1.0"
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
@@ -26,6 +26,6 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon app.js",
     "postinstall": "npx prisma generate --no-engine || true",
-    "start": "cross-env NODE_ENV=production node app.js"
+    "start": "node app.js"
   }
 }
