--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon app.js",
-    "postinstall": "npx prisma generate --no-engine || true",
+    "postinstall": "prisma generate",
     "start": "node app.js"
   }
 }
