config para deploy na azure

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon app.js",
-    "postinstall": "npx prisma generate",
-    "start": "npx prisma generate && node app.js"
+    "start": "node app.js"
   }
 }
