--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon app.js",
     "start": "node app.js",
-    "postinstall": "npx prisma generate"
+    "prisma:generate": "prisma generate",
+    "postinstall": "prisma generate"
   }
 }
