fix: add start script for Azure

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "start": "node app.js",
     "prisma:generate": "prisma generate",
     "postinstall": "prisma generate"
-  }
+  },
+  "engines": {
+  "node": "22.x"
+}
 }
