--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon app.js",
     "start": "node app.js",
-    "prisma:generate": "prisma generate",
-    "postinstall": "prisma generate"
+    "prisma:generate": "prisma generate"
   },
   "engines": {
   "node": ">=22.x"
