--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
   "dependencies": {
     "@prisma/client": "^6.16.2",
-    "prisma": "^6.16.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "form-data": "^4.0.4",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^12.1.0",
     "mysql2": "^3.15.1",
     "nodemailer": "^7.0.6",
+    "prisma": "^6.16.2",
+    "redis": "^5.10.0",
     "socket.io": "^4.8.1",
     "socketio": "^1.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^5.10.2",
-    "cross-env": "^7.0.3"
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
@@ -29,6 +34,6 @@
     "prisma:generate": "prisma generate"
   },
   "engines": {
-  "node": ">=22.x"
-}
+    "node": ">=22.x"
+  }
 }
