--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-rate-limit": "^8.2.1",
     "form-data": "^4.0.4",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^12.1.0",
     "mysql2": "^3.15.1",
