--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "livekit-server-sdk": "^2.14.2",
     "mailgun.js": "^12.1.0",
     "mysql2": "^3.15.1",
     "nodemailer": "^7.0.6",
